<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DroidPad</string>
	<string name="Wifi">Wifi settings</string>
	<string name="WifiShort">Wifi</string>
	<string name="About">About</string>
	<string name="Website">Website</string>
	<string name="Settings">Settings</string>
	<string name="Calibrate">Calibrate</string>
	<string name="about_title">About DroidPad</string><string name="generic_layout_description">%1$d buttons, %2$d sliders, %3$d trackpads.</string>
	<string name="generic_layout_title">%1$s layout %2$d</string>
	<string name="connectWaiting">Waiting for connection&#8230;</string>
	<string name="connected">Connected to PC</string>
	<string name="connectFailed">Lost connection with computer. Waiting for reconnect&#8230;</string>
	<string name="js">Joystick</string>
	<string name="mouse">Mouse</string>
	<string name="slideshow">Slideshow</string>
	
	<string name="welcome">If you have used DroidPad before, please update the software running on your computer to the 2.0 version of DroidPad.</string>
	
	<string name="customlayouthelp">Design custom layouts</string>
	
	<string name="enable_dev_mode">Enable USB (Development) Mode</string>
	
	<string name="gettingstarted">Getting Started</string>
	
	<string name="stop">Stop</string>
	
	<string name="pairnewdevice">Pair new Device</string>
	
	<string name="pairdevicemessage">Please scan the barcode generated by the computer application. Only scan barcodes on computers that you trust.</string>
	
	<string name="pairfailedtitle">Pairing failed</string>
	
	<string name="pairfaileddescription">DroidPad couldn\'t pair with this computer.
	    Please make sure that you scan a QR code that is generated by the DroidPad computer software.
	    To do this, click File->Pair New Device from the computer software.</string>
	    
	<string name="pairsuccesstitle">Pairing successful</string>
	
	<string name="pairsuccessdescription">The computer %s was successfully paired to this device.</string>
	
	<string name="authfailedtitle">Authentication failed</string>
	
	<string name="authfaileddescription">DroidPad now secures the connections between the computer and the phone / tablet.
	    To make sure the communications are secure, please select the \'Pair New Device\' option from the \'File\' menu on the computer.
	    This only has to be done once and ensures secure communications.</string>
	    
	<string name="editlayouttitle">Designing Layouts</string>
	
	<string name="editlayoutdescription">To design new layouts for DroidPad, please visit digitalsquid.co.uk/droidpad/layout-editor
	    on your computer, or click the link from within the computer software.</string>
</resources>
